# fcitx-table-french

./: PKGBUILD  README.md
src/: CMakeLists.txt
src/icons/: CMakeLists.txt
src/tables/: CMakeLists.txt  francais.conf
